--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <section class="page-header">
         <h1 class="project-name">Kisshanee's Image Gallery</h1>
-        <h2 class="project-tagline">Lab version</h2>
+        <h2 class="project-tagline">Food</h2>
       </section>
 
       <section class="gallery">
