--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <section class="page-header">
         <h1 class="project-name">Kisshanee's Image Gallery</h1>
-        <h2 class="project-tagline">Lab version</h2>
+        <h2 class="project-tagline">Custom Image Gallery</h2>
       </section>
 
       <section class="gallery">
