--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="container">
 
       <section class="page-header">
-        <h1 class="project-name">Kisshanee's Image Gallery</h1>
-        <h2 class="project-tagline">Custom Image Gallery</h2>
+        <h1 class="project-name">Food Frenzy</h1>
+        <h2 class="project-tagline">Healthy food options for everyday life</h2>
       </section>
 
       <section class="gallery">
