--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
       <section class="page-header">
         <h1 class="project-name">Food Frenzy</h1>
         <h2 class="project-tagline">Healthy food options for everyday life</h2>
+        <hr />
+        <p>Food Frenzy is a website dedicated to providing examples of food options that are not only healthy, but also tasty. We hope that the items listed on this page will inspire you to create your own recipes at home.</p>
       </section>
 
       <section class="gallery">
