--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
 
 <!-- Column 1 -->
     <div class="column1of3">
-      <p>Put info here</p>
+      <br />
+      <br />
+      <h3>Diversify your meals with vegetables</h3>
+      <hr />
+      <p>There are hundreds of vegetables avaliable for you to use in your next meal. Read about the health benefits of red onions here: <a href="http://www.healwithfood.org/health-benefits/eating-red-onions.php" target="_blank"> Health Benefits of Eating Red Onions</a> and consider adding them to your next meal.</p>
     </div>
 
 <!-- Column 2 -->
