--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   
   <!-- Column 3 --> 
   <div class="column3of3">
-    <p>Put info here</p>
+    <p>Baking homemade cookies allow you to alter your recipe and add healthy alternatives. Shop for nuts to add to your next dessert here: <a href="https://nuts.com/nuts/" target="_blank">Nuts</a></p>
   </div>
   
 
