--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
   
   <!-- Column 3 --> 
   <div class="column3of3">
+    <h3>Bake pastries at home</h3>
+    <hr />
     <p>Baking homemade cookies allow you to alter your recipe and add healthy alternatives. Shop for nuts to add to your next dessert here: <a href="https://nuts.com/nuts/" target="_blank">Nuts</a></p>
   </div>
   
