--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     
     <div id="img6" style="display:none;">
       <p>Frozen Berries</p>
+      <p>Photo by <a href="https://unsplash.com/designerdev" target="_blank">Devin Rajaram</a></p>
       <img src="Images/large/006.jpg">
     </div>
     
