--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
         <ul class="imageGallery">
           <li><a href="#img2" rel="modal:open"><img src="Images/thumbnails/002.jpg"></a></li>
         </ul>
+        <div class="column3of3">
+    <h3>Bake pastries at home</h3>
+    <hr />
+    <p>Baking homemade cookies allow you to alter your recipe and add healthy alternatives. Shop for nuts to add to your next dessert here: <a href="https://nuts.com/nuts/" target="_blank">Nuts</a></p>
+  </div>
       </section>
       
            <section class="gallery">
