--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="column3of3">
     <h3>Bake Pastries at Home</h3>
     <hr />
-    <p>Baking homemade cookies allow you to alter your recipe and add healthy alternatives. Shop for nuts to add to your next dessert here: <a href="https://nuts.com/nuts/" target="_blank">Nuts</a></p>
+    <p>Baking homemade pastries allow you to alter your recipe and add healthy alternatives. Nuts are a great addition to food and are packed with protein. Shop for nuts to add to your next dessert here: <a href="https://nuts.com/nuts/" target="_blank">Nuts</a></p>
         </div>
   <ul class="imageGallery">
           <li><a href="#img2" rel="modal:open"><img src="Images/thumbnails/002.jpg"></a></li>
@@ -140,7 +140,7 @@
       <br />
       <h3>Fun with Fruit</h3>
       <hr />
-      <p>Info</p>
+      <p>Win the parent of the year award with these <a href="http://www.myrecipes.com/kids/kid-approved/kids-fruit-recipes" target=_blank> Fruit Recipes for Kids</a>. These recipes present fruit in creative ways that don't make children feel like they are eating healthly.</p>
     </div>
         <ul class="imageGallery">
           <li><a href="#img3" rel="modal:open"><img src="Images/thumbnails/003.jpg"></a></li>
@@ -152,7 +152,7 @@
        <div class="column3of3">
     <h3>Baking with Beans</h3>
     <hr />
-    <p>Info</p>
+    <p>Vegans love desserts too! Bake with <a href="http://www.theflamingvegan.com/view-post/Brownies-cookies-cakes-using-beans" target=_blank>Beans</a> and try these unique desserts. </p>
       </div>
         <ul class="imageGallery">
           <li><a href="#img4" rel="modal:open"><img src="Images/thumbnails/004.jpg"></a></li>
@@ -165,7 +165,7 @@
       <br />
       <h3>Mix & Match</h3>
       <hr />
-      <p>Info</p>
+      <p>Presentation is an important aesthetic factor when preparing a meal. Mix & Match various colors to make your dish stand out and read up about the <a href="http://www.escoffieronline.com/the-perfect-plate-principles-of-food-presentation/" target=_blank>Principles of Food Presentation</a>.</p>
     </div>
         <ul class="imageGallery">
           <li><a href="#img5" rel="modal:open"><img src="Images/thumbnails/005.jpg"></a></li>
@@ -177,7 +177,7 @@
        <div class="column3of3">
     <h3>Frozen vs Fresh</h3>
     <hr />
-    <p>Info</p>
+    <p>Do you always purchase fresh fruit? Read the <a href="http://abcnews.go.com/Health/reasons-buy-frozen-fruits-veggies/story?id=20683879" target=_blank>5 Reasons to Buy Frozen Fruits and Veggies</a> and maybe on your next trip to the grocery store, frozen items will be on your list.</p>
       </div>
         <ul class="imageGallery">
           <li><a href="#img6" rel="modal:open"><img src="Images/thumbnails/006.jpg"></a></li>
