--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </section>
       
 <!-- Column 3 -->
-           <section class="gallery">
+<section class="gallery">
          <div class="column3of3">
     <h3>Seeing Red</h3>
     <hr />
@@ -227,7 +227,7 @@
          <div class="column3of3">
     <h3>Wake Up!</h3>
     <hr />
-    <p>Sure you drink coffee every morning. But change thing up with these <a href="http://sprudge.com/5-la-coffee-drinks-twist-61077.html" target=_blank>5 Inventive Coffee Drinks</a>.</p>
+    <p>Sure you drink coffee every morning. But change things up with these <a href="http://sprudge.com/5-la-coffee-drinks-twist-61077.html" target=_blank>5 Inventive Coffee Drinks</a>.</p>
         </div>
         <ul class="imageGallery">
           <li><a href="#img10" rel="modal:open"><img src="Images/thumbnails/010.jpg"></a></li>
