--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
     
     <div id="img11" style="display:none;">
-      <p>img 11</p>
+      <p>Welcome to Food Frenzy</p>
       <img src="Images/large/011.jpg">
     </div>
 
