--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <br />
       <h3>Breakfast</h3>
       <hr />
-      <p>Eating balanced meals daily are necessary for the functioning of our bodies. So why is it especially important to eat breakfast? Learn about <a href="http://www.jhsph.edu/offices-and-services/student-affairs/_documents/Breakfast" target="_blank>Why You Should Eat a Healthy Breakfast</a>.</p>
+      <p>Eating balanced meals daily are necessary for the functioning of our bodies. So why is it especially important to eat breakfast? Learn about <a href="http://www.jhsph.edu/offices-and-services/student-affairs/_documents/Breakfast" target=_blank>Why You Should Eat a Healthy Breakfast</a>.</p>
     </div>
         <ul class="imageGallery">
           <li><a href="#img7" rel="modal:open"><img src="Images/thumbnails/007.jpg"></a></li>
