--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
     <div class="container">
 
       <section class="page-header">
-        <section class="gallery">
-        <ul class="imageGallery">
-          <li><a href="#img11" rel="modal:open"><img src="Images/thumbnails/011.jpg"></a></li>
-        </ul>
-      </section>
+      <a href="#img11" rel="modal:open"><img src="Images/thumbnails/011.jpg"></a>
         <h1 class="project-name">Food Frenzy</h1>
         <h2 class="project-tagline">Healthy food options for everyday life</h2>
         <hr />
