--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
     <div class="container">
 
       <section class="page-header">
-      <a href="#img11" rel="modal:open"><img src="Images/thumbnails/011.jpg"></a>
-        <h1 class="project-name">Food Frenzy</h1>
+        <a href="#img11" rel="modal:open"><img src="Images/thumbnails/011.jpg"></a><h1 class="project-name">Food Frenzy</h1>
         <h2 class="project-tagline">Healthy food options for everyday life</h2>
         <hr />
         <p>Food Frenzy is an image gallery dedicated to providing examples of food options that are not only healthy, but also creative and tasty. We hope that the items listed on this page will inspire you to create your own recipes at home.</p>
