--- a/index.html
+++ b/index.html
@@ -84,17 +84,13 @@
       <p>Photo by <a href="https://unsplash.com/worthyofelegance" target="_blank">Padurariu Alexandru</a></p>
       <img src="Images/large/010.jpg">
     </div>
-    
-    <div id="img11" style="display:none;">
-      <p>Welcome to Food Frenzy</p>
-      <img src="Images/large/011.jpg">
-    </div>
-
+ 
+ 
     <!-- Page content -->
     <div class="container">
 
       <section class="page-header">
-        <a href="#img11" rel="modal:open"><img src="Images/thumbnails/011.jpg"></a><h1 class="project-name">Food Frenzy</h1>
+        <h1 class="project-name">Food Frenzy</h1>
         <h2 class="project-tagline">Healthy food options for everyday life</h2>
         <hr />
         <p>Food Frenzy is an image gallery dedicated to providing examples of food options that are not only healthy, but also creative and tasty. We hope that the items listed on this page will inspire you to create your own recipes at home.</p>
